--- a/branches/dev-thirdparty-updates-20160215/Makefile.in
+++ b/branches/dev-thirdparty-updates-20160215/Makefile.in
@@ -822,7 +822,7 @@ casadi:
 	  PYTHON_LIB=""; \
 	  PYTHON_INCLUDE=""; \
 	fi; \
-	make -f Makefile "CMAKE_PYTHON_LIBRARY=$${PYTHON_LIB}" "CMAKE_PYTHON_INCLUDE_DIR=$${PYTHON_INCLUDE)" \
+	make -f Makefile "CMAKE_PYTHON_LIBRARY=$${PYTHON_LIB}" "CMAKE_PYTHON_INCLUDE_DIR=$${PYTHON_INCLUDE}" \
 	    "SWIGCHECK_BUILD_DIR=$(SWIGCHECK_BUILD_DIR)" "CASADI_BUILD_DIR=$(CASADI_BUILD_DIR)" "IPOPT_HOME=$(IPOPT_HOME)"
 
 install_casadi: casadi
@@ -834,7 +834,7 @@ install_casadi: casadi
 	  PYTHON_LIB=""; \
 	  PYTHON_INCLUDE=""; \
 	fi; \
-	make -f Makefile install "CMAKE_PYTHON_LIBRARY=$${PYTHON_LIB}" "CMAKE_PYTHON_INCLUDE_DIR=$${PYTHON_INCLUDE}" 
+	make -f Makefile install "CMAKE_PYTHON_LIBRARY=$${PYTHON_LIB}" "CMAKE_PYTHON_INCLUDE_DIR=$${PYTHON_INCLUDE}" \
 	    "SWIGCHECK_BUILD_DIR=$(SWIGCHECK_BUILD_DIR)" "CASADI_BUILD_DIR=$(CASADI_BUILD_DIR)" "IPOPT_HOME=$(IPOPT_HOME)"
 	mkdir -p $(DESTDIR)$(prefix)/Python/
 	cp -r $(abs_builddir)/casadi_install/casadi $(DESTDIR)$(prefix)/Python/
