--- a/branches/dev-thirdparty-updates-20160215/JMI/src/Makefile.in
+++ b/branches/dev-thirdparty-updates-20160215/JMI/src/Makefile.in
@@ -292,6 +292,8 @@ CASADI_HOME = @CASADI_HOME@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
+CMAKE_PYTHON_INCLUDE = @CMAKE_PYTHON_INCLUDE@
+CMAKE_PYTHON_LIB = @CMAKE_PYTHON_LIB@
 CP = @CP@
 CPP = @CPP@
 CPPAD_HOME = @CPPAD_HOME@
