--- a/branches/dev-thirdparty-updates-20160215/Makefile.in
+++ b/branches/dev-thirdparty-updates-20160215/Makefile.in
@@ -134,6 +134,8 @@ CASADI_HOME = $(abs_top_srcdir)/ThirdParty/CasADi/CasADi
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
+CMAKE_PYTHON_INCLUDE = @CMAKE_PYTHON_INCLUDE@
+CMAKE_PYTHON_LIB = @CMAKE_PYTHON_LIB@
 CP = @CP@
 CPP = @CPP@
 CPPAD_HOME = @CPPAD_HOME@
@@ -815,27 +817,11 @@ uninstall-am:
 
 casadi:
 	cd $(abs_builddir)/ThirdParty/CasADi; \
-	if [ "$(PYTHON_HOME)" ]; then \
-	  PYTHON_LIB="$(PYTHON_HOME)/libs/libpython27.a"; \
-	  PYTHON_INCLUDE="$(PYTHON_HOME)/include"; \
-	else \
-	  PYTHON_LIB=""; \
-	  PYTHON_INCLUDE=""; \
-	fi; \
-	make -f Makefile "CMAKE_PYTHON_LIBRARY=$${PYTHON_LIB}" "CMAKE_PYTHON_INCLUDE_DIR=$${PYTHON_INCLUDE}" \
-	    "SWIGCHECK_BUILD_DIR=$(SWIGCHECK_BUILD_DIR)" "CASADI_BUILD_DIR=$(CASADI_BUILD_DIR)" "IPOPT_HOME=$(IPOPT_HOME)"
+	make -f Makefile  "SWIGCHECK_BUILD_DIR=$(SWIGCHECK_BUILD_DIR)" "CASADI_BUILD_DIR=$(CASADI_BUILD_DIR)" "IPOPT_HOME=$(IPOPT_HOME)"
 
 install_casadi: casadi
 	cd $(abs_builddir)/ThirdParty/CasADi; \
-	if [ "$(PYTHON_HOME)" ]; then \
-	  PYTHON_LIB="$(PYTHON_HOME)/libs/libpython27.a"; \
-	  PYTHON_INCLUDE="$(PYTHON_HOME)/include"; \
-	else \
-	  PYTHON_LIB=""; \
-	  PYTHON_INCLUDE=""; \
-	fi; \
-	make -f Makefile install "CMAKE_PYTHON_LIBRARY=$${PYTHON_LIB}" "CMAKE_PYTHON_INCLUDE_DIR=$${PYTHON_INCLUDE}" \
-	    "SWIGCHECK_BUILD_DIR=$(SWIGCHECK_BUILD_DIR)" "CASADI_BUILD_DIR=$(CASADI_BUILD_DIR)" "IPOPT_HOME=$(IPOPT_HOME)"
+	make -f Makefile install "SWIGCHECK_BUILD_DIR=$(SWIGCHECK_BUILD_DIR)" "CASADI_BUILD_DIR=$(CASADI_BUILD_DIR)" "IPOPT_HOME=$(IPOPT_HOME)"
 	mkdir -p $(DESTDIR)$(prefix)/Python/
 	cp -r $(abs_builddir)/casadi_install/casadi $(DESTDIR)$(prefix)/Python/
 	cp $(abs_builddir)/casadi_build/swig/casadi_core.py $(DESTDIR)$(prefix)/Python/casadi
@@ -891,22 +877,19 @@ $(OC_SRC)/bin/separateProcess.jar:  mc_optimica
 $(MC_BUILD)/modelicacasadi_wrapper/swig/modelicacasadi_wrapper.py: modelicacasadi_wrapper
 
 modelicacasadi_wrapper: $(MC_SRC)/bin/ModelicaCompiler.jar $(OC_SRC)/bin/OptimicaCompiler.jar $(MC_SRC)/bin/util.jar ifcasadi # $(MC_LIB)
-	if [ "$(PYTHON_HOME)" ]; then \
-	  CMAKE_EXTRA_ARGS="-DPYTHON_LIBRARY=$(PYTHON_HOME)/libs/libpython27.a -DPYTHON_INCLUDE_DIR=$(PYTHON_HOME)/include"; \
-	else \
-	  CMAKE_EXTRA_ARGS=""; \
-	fi; \
 	mkdir -p $(MC_BUILD)/modelicacasadi_wrapper; \
 	cd $(MC_BUILD)/modelicacasadi_wrapper; \
 	case $(build) in \
 	*-cygwin*|*-mingw*) \
 	cmake $(MC_INTERFACE) -G "MSYS Makefiles" -DCMAKE_CXX_COMPILER_ARG1="-m32" -DCMAKE_CXX_FLAGS="-m32" \
 	    -DMC_BUILD="$(MC_BUILD)" -DIPOPT_HOME="$(IPOPT_HOME)" -DCASADI_BUILD_DIR="$(CASADI_BUILD_DIR)" \
-	    -DIFCASADI_JAR_BASE="$(JAVA_CASADI_BASE_DIR)" -DCASADI_HOME="$(CASADI_HOME)" $${CMAKE_EXTRA_ARGS} ;; \
+	    -DIFCASADI_JAR_BASE="$(JAVA_CASADI_BASE_DIR)" -DCASADI_HOME="$(CASADI_HOME)" \
+	    "$(CMAKE_PYTHON_LIB)" "$(CMAKE_PYTHON_INCLUDE)" ;; \
 	*) \
 	cmake $(MC_INTERFACE) \
 	    -DMC_BUILD="$(MC_BUILD)" -DIPOPT_HOME="$(IPOPT_HOME)" -DCASADI_BUILD_DIR="$(CASADI_BUILD_DIR)" \
-	    -DIFCASADI_JAR_BASE="$(JAVA_CASADI_BASE_DIR)" -DCASADI_HOME="$(CASADI_HOME)" $${CMAKE_EXTRA_ARGS} ;; \
+	    -DIFCASADI_JAR_BASE="$(JAVA_CASADI_BASE_DIR)" -DCASADI_HOME="$(CASADI_HOME)" \
+	    "$(CMAKE_PYTHON_LIB)" "$(CMAKE_PYTHON_INCLUDE)" ;; \
 	esac 
 	cd $(MC_BUILD)/modelicacasadi_wrapper;  make modelicacasadi_wrapper
 
