Fixed handling of Python installation with spaces in path. (#3645)

--- a/configure.ac
+++ b/configure.ac
@@ -435,9 +435,10 @@ AS_IF([test "x$ANT" = x],
 AC_ARG_VAR(PYTHON_HOME, [Python installation to use])
 AS_IF([test "${PYTHON_HOME}"],
       [
-          AC_MSG_RESULT([Using Python installation ${PYTHON_HOME}])
-          CMAKE_PYTHON_LIB="-DPYTHON_LIBRARY=`cd $PYTHON_HOME; pwd`/libs/libpython27.a"
-          CMAKE_PYTHON_INCLUDE="-DPYTHON_INCLUDE_DIR=`cd $PYTHON_HOME; pwd`/include"
+          PYTHON_HOME_ABS="`cd ${PYTHON_HOME}; pwd`"
+          AC_MSG_RESULT([Using Python installation ${PYTHON_HOME_ABS}])
+          CMAKE_PYTHON_LIB="-DPYTHON_LIBRARY=${PYTHON_HOME_ABS}/libs/libpython27.a"
+          CMAKE_PYTHON_INCLUDE="-DPYTHON_INCLUDE_DIR=${PYTHON_HOME_ABS}/include"
       ], [
           AS_IF([test "${PYTHON_LIB}" && test "${PYTHON_INCLUDE}"], 
             [
@@ -446,8 +447,9 @@ AS_IF([test "${PYTHON_HOME}"],
                 CMAKE_PYTHON_INCLUDE="-DPYTHON_INCLUDE_DIR=${PYTHON_INCLUDE}"
             ], [
                 AC_MSG_RESULT([Python installation not specified.])
-                CMAKE_PYTHON_LIB=
-                CMAKE_PYTHON_INCLUDE=
+                # Empty arguments will make cmake fail, so use dummies instead
+                CMAKE_PYTHON_LIB="-DPYTHON_LIBRARY_DUMMY="
+                CMAKE_PYTHON_INCLUDE="-DPYTHON_INCLUDE_DIR_DUMMY="
             ])
       ])
 AC_SUBST(CMAKE_PYTHON_LIB)
