Fixed build error introduced in r8963. (#3645)

--- a/Makefile.am
+++ b/Makefile.am
@@ -127,7 +127,7 @@ modelicacasadi_wrapper: $(MC_SRC)/bin/ModelicaCompiler.jar $(OC_SRC)/bin/Optimic
 	cmake $(MC_INTERFACE) -G "MSYS Makefiles" -DCMAKE_CXX_COMPILER_ARG1="-m32" -DCMAKE_CXX_FLAGS="-m32" \
 	    -DMC_BUILD="$(MC_BUILD)" -DIPOPT_HOME="$(IPOPT_HOME)" -DCASADI_BUILD_DIR="$(CASADI_BUILD_DIR)" \
 	    -DIFCASADI_JAR_BASE="$(JAVA_CASADI_BASE_DIR)" -DCASADI_HOME="$(CASADI_HOME)" \
-	    "$(CMAKE_PYTHON_LIB)" "(CMAKE_PYTHON_INCLUDE)" ;; \
+	    "$(CMAKE_PYTHON_LIB)" "$(CMAKE_PYTHON_INCLUDE)" ;; \
 	*) \
 	cmake $(MC_INTERFACE) \
 	    -DMC_BUILD="$(MC_BUILD)" -DIPOPT_HOME="$(IPOPT_HOME)" -DCASADI_BUILD_DIR="$(CASADI_BUILD_DIR)" \
