--- a/Compiler/OptimicaCompiler/build.xml
+++ b/Compiler/OptimicaCompiler/build.xml
@@ -33,7 +33,7 @@
     <property name="jars" value="OptimicaCompiler,util,separateProcess"/>
     <property name="OptimicaCompiler.jar.packages" value="${base_package}"/>
     <property name="OptimicaCompiler.jar.include_resources" value="true"/>
-    <property name="util.jar.packages" value="org.jmodelica.util"/>
+    <property name="util.jar.packages" value="org.jmodelica.util,org.jmodelica.api"/>
     <property name="separateProcess.jar.packages" value="org.jmodelica.util,org.jmodelica.separateProcess"/>
     
     <import file="../build-base.xml"/>
