--- a/trunk/Compiler/OptimicaCompiler/build.xml
+++ b/trunk/Compiler/OptimicaCompiler/build.xml
@@ -34,7 +34,7 @@
     <property name="OptimicaCompiler.jar.packages" value="${base_package}"/>
     <property name="OptimicaCompiler.jar.include_resources" value="true"/>
     <property name="util.jar.packages" value="org.jmodelica.util,org.jmodelica.api"/>
-    <property name="separateProcess.jar.packages" value="org.jmodelica.util,org.jmodelica.separateProcess"/>
+    <property name="separateProcess.jar.packages" value="org.jmodelica.util,org.jmodelica.api,org.jmodelica.separateProcess"/>
     
     <import file="../build-base.xml"/>
 </project>
