--- a/branches/CasADiUpdate24/Compiler/ModelicaCompiler/build.xml
+++ b/branches/CasADiUpdate24/Compiler/ModelicaCompiler/build.xml
@@ -34,7 +34,7 @@
     <property name="ModelicaCompiler.jar.packages" value="${base_package}"/>
     <property name="ModelicaCompiler.jar.include_resources" value="true"/>
     <property name="util.jar.packages" value="org.jmodelica.util,org.jmodelica.api"/>
-    <property name="separateProcess.jar.packages" value="org.jmodelica.util,org.jmodelica.separateProcess"/>
+    <property name="separateProcess.jar.packages" value="org.jmodelica.util,org.jmodelica.api,org.jmodelica.separateProcess"/>
     
     <property name="javadoc.path" value="doc/javadoc"/>
     <property name="javadoc.packages" value="org.jmodelica.*"/>
