--- a/trunk/Python/src/tests_jmodelica/files/Modelica/Resources/CMakeLists.txt
+++ b/trunk/Python/src/tests_jmodelica/files/Modelica/Resources/CMakeLists.txt
@@ -56,7 +56,11 @@ else(CMAKE_HOST_WIN32)
     message(SEND_ERROR "Target platform is not supported by the tests")
 set(JM_PLATFORM not_supported)
 endif()
-if(CMAKE_SIZEOF_VOID_P EQUAL 4)
+if(" ${CMAKE_C_FLAGS} " MATCHES " -m64 ")
+    set(JM_PLATFORM "${JM_PLATFORM}64")
+elseif(" ${CMAKE_C_FLAGS} " MATCHES " -m32 ")
+    set(JM_PLATFORM "${JM_PLATFORM}32")
+elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
     set(JM_PLATFORM "${JM_PLATFORM}32")
 else()
     set(JM_PLATFORM "${JM_PLATFORM}64")
