--- a/Python/Makefile.in
+++ b/Python/Makefile.in
@@ -33,8 +33,9 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-subdir = Python/src/tests_jmodelica/files/Modelica/Resources
-DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
+subdir = Python
+DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
+	$(srcdir)/jm_ipython.sh.in $(srcdir)/jm_python.sh.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/libtool.m4 \
 	$(top_srcdir)/m4/ltoptions.m4 $(top_srcdir)/m4/ltsugar.m4 \
@@ -44,7 +45,7 @@ am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(install_sh) -d
 CONFIG_HEADER = $(top_builddir)/config.h
-CONFIG_CLEAN_FILES =
+CONFIG_CLEAN_FILES = jm_ipython.sh jm_python.sh
 CONFIG_CLEAN_VPATH_FILES =
 SOURCES =
 DIST_SOURCES =
@@ -209,7 +210,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 TESTLIBRARY_BUILD_DIR = $(abs_builddir)/build
-TESTLIBRARY_SRC_DIR = $(abs_top_srcdir)/Python/src/tests_jmodelica/files/Modelica/Resources
+TESTLIBRARY_SRC_DIR = $(abs_top_srcdir)/Python
 all: all-am
 
 .SUFFIXES:
@@ -222,9 +223,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu Python/src/tests_jmodelica/files/Modelica/Resources/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign Python/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu Python/src/tests_jmodelica/files/Modelica/Resources/Makefile
+	  $(AUTOMAKE) --foreign Python/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
@@ -243,6 +244,10 @@ $(top_srcdir)/configure:  $(am__configure_deps)
 $(ACLOCAL_M4):  $(am__aclocal_m4_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 $(am__aclocal_m4_deps):
+jm_ipython.sh: $(top_builddir)/config.status $(srcdir)/jm_ipython.sh.in
+	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
+jm_python.sh: $(top_builddir)/config.status $(srcdir)/jm_python.sh.in
+	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 
 mostlyclean-libtool:
 	-rm -f *.lo
