--- a/RuntimeLibrary/CMakeLists.txt
+++ b/RuntimeLibrary/CMakeLists.txt
@@ -26,6 +26,7 @@ project (SimulationRuntime)
 add_definitions(-DTOP_SRC)
 add_definitions(-DSUNDIALS_HOME)
 add_definitions(-DMINPACK_HOME)
+add_definitions(-DCSPARSE_HOME)
 if(NOT TOP_SRC)
     set(TOP_SRC ${CMAKE_CURRENT_SOURCE_DIR}/../)
     message(STATUS "TOP_SRC was not defined, using ${TOP_SRC}")
@@ -36,6 +37,12 @@ if(NOT MINPACK_HOME)
     message(STATUS "MINPACK_HOME was not defined, using ${MINPACK_HOME}")
 endif()
 include_directories(${MINPACK_HOME})
+
+if(NOT CSPARSE_HOME)
+    set(CSPARSE_HOME ${TOP_SRC}/ThirdParty/CSparse/csparse/Include)
+    message(STATUS "CSPARSE_HOME was not defined, using ${CSPARSE_HOME}")
+endif()
+include_directories(${CSPARSE_HOME})
 
 # Get the JModelica install directory
 if(CMAKE_INSTALL_DIR)
