--- a/RuntimeLibrary/Makefiles/Makefile.windows
+++ b/RuntimeLibrary/Makefiles/Makefile.windows
@@ -162,6 +162,7 @@ RUNTIMELIBRARY_INC_DIR = ${JMODELICA_HOME}/include/RuntimeLibrary
 STANDARD_HEADER_INC_DIR = ${JMODELICA_HOME}/ThirdParty/FMI/2.0
 CPPAD_INC_DIR = $(CPPAD_HOME)
 SUNDIALS_INC_DIR = $(SUNDIALS_HOME)/include
+CSPARSE_INC_DIR = ${JMODELICA_HOME}/ThirdParty/CSparse/include
 
 # Directories with libraries
 JMI_LIB_DIR = ${JMODELICA_HOME}/lib
@@ -171,6 +172,8 @@ MINPACK_LIB_DIR = ${JMODELICA_HOME}/ThirdParty/Minpack/lib
 MINPACK_LIB_DIR64 = ${JMODELICA_HOME}/ThirdParty/Minpack/lib64
 SUNDIALS_LIB_DIR = $(SUNDIALS_HOME)/lib
 SUNDIALS_LIB_DIR64 = $(SUNDIALS_HOME)/lib64
+CSPARSE_LIB_DIR = ${JMODELICA_HOME}/ThirdParty/CSparse/lib
+CSPARSE_LIB_DIR64 = ${JMODELICA_HOME}/ThirdParty/CSparse/lib64
 
 # Flags needed for specific libs
 ifdef IPOPT_HOME
@@ -179,6 +182,7 @@ else
 LIB_FLAGS_IPOPT = 
 endif
 LIB_MINPACK  = "-L$(MINPACK_LIB_DIR)" -l:libcminpack.a
+LIB_CSPARSE  = "-L$(CSPARSE_LIB_DIR)" -l:libcsparse.a
 LIB_SUNDIALS = "-L$(SUNDIALS_LIB_DIR)" -l:libsundials_kinsol.a -l:libsundials_nvecserial.a -l:libsundials_cvode.a
 STATIC_PTHREADS_CONT = $(shell dir "$(STATIC_PTHREADS_HOME)")
 ifneq ($(findstring ..,$(STATIC_PTHREADS_CONT)),)
@@ -189,7 +193,7 @@ endif
 
 # Libraries necessary to link with jmi
 LIBS_FMU_STD = -static-libstdc++ -static-libgcc -ljmi "-L$(JMI_LIB_DIR)" $(EXT_LIB_DIRS) $(EXTERNAL_LIBS) -lModelicaExternalC -lzlib -ljmi
-LIBS_FMU_ALL = $(LIBS_FMU_STD) $(LIB_SUNDIALS) $(LIB_MINPACK) $(LIB_PTHREADS)
+LIBS_FMU_ALL = $(LIBS_FMU_STD) $(LIB_SUNDIALS) $(LIB_MINPACK) $(LIB_CSPARSE) $(LIB_PTHREADS)
 LIBS_FMUME10 = -lfmi1_me           $(LIBS_FMU_ALL)
 LIBS_FMUCS10 = -lfmi1_cs -lfmi1_me $(LIBS_FMU_ALL)
 LIBS_FMU20   = -lfmi2              $(LIBS_FMU_ALL)
@@ -198,8 +202,8 @@ LIBS_JMU = $(LIBS_IPOPT) -lpthread
 LIBS_CEVAL = $(LIBS_FMU_STD)
 
 # Include paths for compilation
-INCL_CPPAD = "-I$(JMI_INC_DIR)" "-I$(CPPAD_INC_DIR)" "-I$(SUNDIALS_INC_DIR)"
-INCL_NOCPPAD = "-I$(RUNTIMELIBRARY_INC_DIR)" "-I${STANDARD_HEADER_INC_DIR}" $(EXT_INC_DIRS) "-I$(SUNDIALS_INC_DIR)"
+INCL_CPPAD = "-I$(JMI_INC_DIR)" "-I$(CPPAD_INC_DIR)" "-I$(SUNDIALS_INC_DIR)" "-I$(CSPARSE_INC_DIR)"
+INCL_NOCPPAD = "-I$(RUNTIMELIBRARY_INC_DIR)" "-I${STANDARD_HEADER_INC_DIR}" $(EXT_INC_DIRS) "-I$(SUNDIALS_INC_DIR)" "-I$(CSPARSE_INC_DIR)"
 
 # set variable to correct makefile (for recursive call in fmume/fmucs)
 MAKEFILE = $(lastword $(MAKEFILE_LIST))
