Reverted changes made in changeset:9351 due to that it fails to build using the old SDK. Related to ticket:4975

--- a/Makefile.in
+++ b/Makefile.in
@@ -50,7 +50,8 @@ host_triplet = @host@
 subdir = .
 DIST_COMMON = $(am__configure_deps) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in $(srcdir)/config.h.in \
-	$(srcdir)/jm_tests.in \
+	$(srcdir)/jm_tests.in $(top_srcdir)/Python/jm_ipython.sh.in \
+	$(top_srcdir)/Python/jm_python.sh.in \
 	$(top_srcdir)/Python/src/required_defaults.py.in \
 	$(top_srcdir)/configure INSTALL config.guess config.sub \
 	depcomp install-sh ltmain.sh missing
@@ -65,7 +66,8 @@ am__CONFIG_DISTCLEAN_FILES = config.status config.cache config.log \
  configure.lineno config.status.lineno
 mkinstalldirs = $(install_sh) -d
 CONFIG_HEADER = config.h
-CONFIG_CLEAN_FILES = jm_tests Python/src/required_defaults.py
+CONFIG_CLEAN_FILES = Python/jm_ipython.sh Python/jm_python.sh jm_tests \
+	Python/src/required_defaults.py
 CONFIG_CLEAN_VPATH_FILES =
 SOURCES =
 DIST_SOURCES =
@@ -140,7 +142,6 @@ CP = @CP@
 CPP = @CPP@
 CPPAD_HOME = @CPPAD_HOME@
 CPPFLAGS = @CPPFLAGS@
-CSPARSE_HOME = @CSPARSE_HOME@
 CURR_DIR = @CURR_DIR@
 CXX = @CXX@
 CXXCPP = @CXXCPP@
@@ -286,7 +287,7 @@ ACLOCAL_AMFLAGS = -I m4
 # EXTRA_DIST =
 
 # SUBDIRS = ThirdParty/Sundials ThirdParty/Zlib ThirdParty/Minizip ThirdParty/Expat JMI/src ThirdParty/Blas ThirdParty/Lapack external/FMILibrary
-SUBDIRS = ThirdParty/Sundials ThirdParty/Minpack ThirdParty/CSparse JMI/src ThirdParty/Blas ThirdParty/Lapack external/FMILibrary RuntimeLibrary Python
+SUBDIRS = ThirdParty/Sundials ThirdParty/Minpack JMI/src ThirdParty/Blas ThirdParty/Lapack external/FMILibrary RuntimeLibrary Python
 assimulo_install_dir = $(abs_builddir)/Assimulo_install
 pymodelica_install_dir = $(abs_builddir)/pymodelica_install
 pyfmi_install_dir = $(abs_builddir)/PyFMI_install
@@ -388,6 +389,10 @@ $(srcdir)/config.h.in:  $(am__configure_deps)
 
 distclean-hdr:
 	-rm -f config.h stamp-h1
+Python/jm_ipython.sh: $(top_builddir)/config.status $(top_srcdir)/Python/jm_ipython.sh.in
+	cd $(top_builddir) && $(SHELL) ./config.status $@
+Python/jm_python.sh: $(top_builddir)/config.status $(top_srcdir)/Python/jm_python.sh.in
+	cd $(top_builddir) && $(SHELL) ./config.status $@
 jm_tests: $(top_builddir)/config.status $(srcdir)/jm_tests.in
 	cd $(top_builddir) && $(SHELL) ./config.status $@
 Python/src/required_defaults.py: $(top_builddir)/config.status $(top_srcdir)/Python/src/required_defaults.py.in
@@ -1084,11 +1089,6 @@ install-exec-local: install-python-packages
 	mkdir -p $(DESTDIR)$(prefix)/ThirdParty/Minpack	
 	cp -r $(MINPACK_HOME)/* $(DESTDIR)$(prefix)/ThirdParty/Minpack
 	cp $(abs_top_srcdir)/ThirdParty/Minpack/cminpack-1.3.2/CopyrightMINPACK.txt $(DESTDIR)$(prefix)/ThirdParty/Minpack
-	mkdir -p $(DESTDIR)$(prefix)/ThirdParty/CSparse  
-	cp -r $(CSPARSE_HOME)/* $(DESTDIR)$(prefix)/ThirdParty/CSparse 
-	cp $(abs_top_srcdir)/ThirdParty/CSparse/csparse/Doc/License.txt $(DESTDIR)$(prefix)/ThirdParty/CSparse
-	cp $(abs_top_srcdir)/ThirdParty/CSparse/README.txt $(DESTDIR)$(prefix)/ThirdParty/CSparse
-	cp $(abs_top_srcdir)/ThirdParty/CSparse/csparse_adding_inplace_methods.patch $(DESTDIR)$(prefix)/ThirdParty/CSparse
 	mkdir -p $(DESTDIR)$(prefix)/ThirdParty/CppAD
 	cp $(CPPAD_HOME)/COPYING $(DESTDIR)$(prefix)/ThirdParty/CppAD
 	mkdir -p $(DESTDIR)$(prefix)/ThirdParty/CppAD/cppad	
