#5213 Added asserts for structural parameter external functions. Updated runtime string handling.

--- a/RuntimeLibrary/src/jmi/CMakeLists.txt
+++ b/RuntimeLibrary/src/jmi/CMakeLists.txt
@@ -45,6 +45,7 @@ set(JMISources
     jmi_global.c
     jmi.c
     jmi_array_none.c
+    jmi_types.c
     jmi_dyn_mem.c
     jmi_dyn_mem_.c
     jmi_block_residual.c
