#5268 Made ode_solver interface in 3) with the exception of expanding the solver return status.

--- a/RuntimeLibrary/src/jmi/CMakeLists.txt
+++ b/RuntimeLibrary/src/jmi/CMakeLists.txt
@@ -62,6 +62,7 @@ set(JMIODESolverSourcesPartial
     jmi_ode_cvode.h
     jmi_ode_euler.h
     jmi_ode_solver.h
+    jmi_ode_solver_impl.h
     jmi_ode_problem.h
     
     jmi_ode_cvode.c
